tests/baselines/reference/unicodeExtendedEscapesInStrings17_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts(1,13): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts(1,18): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts(1,23): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings17_ES5.ts (3 errors) ====
    var x = "\u{r}\u{n}\u{t}";
                
!!! error TS1125: Hexadecimal digit expected.
                     
!!! error TS1125: Hexadecimal digit expected.
                          
!!! error TS1125: Hexadecimal digit expected.
    